# image_processor

./: .clang-tidy  .gitignore  CMakeLists.txt  bmp_handler.cpp  bmp_handler.h  cmd_handler.cpp  cmd_handler.h  controller.cpp  controller.h  filter_creators.cpp  filter_creators.h  main.cpp  pipeline.cpp  pipeline.h
filters/: base.cpp  base.h  blur.cpp  blur.h  crop.cpp  crop.h  edge.cpp  edge.h  excessively.cpp  excessively.h  grayscale.cpp  grayscale.h  motion.cpp  motion.h  negative.cpp  negative.h  sharp.cpp  sharp.h
structures/: filter_descriptor.h  matrix.h  pixel.h
